@@ -30,23 +30,34 @@ public class PlayerEntity extends GameEntity {
     private static final float JUMP_SENSOR_EXTRA = 0.01f;
     private static final float ANTI_WALL_RUN = 0.1f; // 0 for wall running
 
-    //PLAYER STATES
-    public final static String WALK_RIGHT = "walk-right";
-    public final static String WALK_LEFT = "walk-left";
-    public final static String IDLE_RIGHT = "idle-right";
-    public final static String IDLE_LEFT = "idle-left";
-    public final static String JUMP_RIGHT = "jump-right";
-    public final static String JUMP_LEFT = "jump-left";
-    public final static String DUCK_RIGHT = "duck-right";
-    public final static String DUCK_LEFT = "duck-left";
-    public final static String SHOT_RIGHT = "shot-right";
-    public final static String SHOT_LEFT = "shot-left";
-
-
     public static Set<GameEntity> COLLECTIBLE_ENTITIES = new HashSet<>();
     public static Set<GameEntity> USED_COLLECTIBLE_ENTITIES = new HashSet<>();
 
-    public static Map<String, Float> ITEM_FLAGS = new HashMap<>();
+    private static Map<String, Float> ITEM_FLAGS = getInitialItemFlags();
+    private static SKIN ACTIVE_SKIN = SKIN.PABLO;
+
+    private int arrowsFired = 0;
+    private int arrowsFiredSinceCheckpoint = 0;
+
+
+    public enum SKIN {
+        PABLO("pablo"),
+        STACY("stacy"),
+        NIGEL("nigel"),
+        SIMON("simon"),
+        ZOMBIE("zombie");
+
+        private String value;
+
+        SKIN(String value){
+            this.value = value;
+        }
+
+        @Override
+        public String toString() {
+            return this.value;
+        }
+    }
 
     /**
      * Creates a PlayerEntity at a given position
@@ -64,7 +75,11 @@ public class PlayerEntity extends GameEntity {
         // Sprites
         SpriteComponent sc = new SpriteComponent(this);
         PlayerSprite playerSprite = new PlayerSprite(new Vector(0,0), new Vector(WIDTH, HEIGHT), 160);
+        CrossbowSprite crossbowSprite = new CrossbowSprite(new Vector(0,0), new Vector(WIDTH, HEIGHT), 160);
+        BootsSprite bootsSprite = new BootsSprite(new Vector(0,0), new Vector(WIDTH, HEIGHT), 160);
         sc.add(playerSprite);
+        sc.add(crossbowSprite);
+        sc.add(bootsSprite);
         addComponent(sc);
 
         // Collider
@@ -90,7 +105,7 @@ public class PlayerEntity extends GameEntity {
         addComponent(new SensorHandlerComponent(this));
 
         // Scripts
-        PlayerScript pc = new PlayerScript(playerSprite, bottomSensor, enemySensor);
+        PlayerScript pc = new PlayerScript(playerSprite, crossbowSprite, bootsSprite, bottomSensor, enemySensor);
         CameraScript cs = new CameraScript(this, new Vector(WIDTH /2, HEIGHT /2));
         ScriptComponent scriptComponent = new ScriptComponent(this);
         scriptComponent.add(pc);
@@ -98,88 +113,73 @@ public class PlayerEntity extends GameEntity {
         addComponent(scriptComponent);
     }
 
-    /**
-     * The PlayerSprite handles the current sprite displayed for the player.
-     * This changes based upon the player's current state.
-     * @author Will Pearson
-     * @author David Hack
-     */
-    public class PlayerSprite extends AnimatedSprite {
+    public int getArrowsFired(){
+        return this.arrowsFired;
+    }
 
-        /**
-         * Constructor does not take any resource ID upon creation as you need
-         * to define the map resource map structure that the sprite will use. This
-         * is done with the addResource() method.
-         *
-         * @param transform  The animated sprite's relative position.
-         * @param dimensions The width and height of the animated sprite.
-         * @param frameTick  The time taken before the image should switch.
-         */
+    public void setArrowCheckpoint(){
+        this.arrowsFiredSinceCheckpoint = 0;
+    }
+
+    public void fireArrow(){
+        this.arrowsFired++;
+        this.arrowsFiredSinceCheckpoint++;
+    }
+
+    public void resetArrowsToCheckpoint(){
+        this.arrowsFired -= this.arrowsFiredSinceCheckpoint;
+        this.arrowsFiredSinceCheckpoint = 0;
+    }
+
+    public void resetArrowsFired(){
+        this.arrowsFired = this.arrowsFiredSinceCheckpoint = 0;
+    }
+
+    public static SKIN getActiveSkin(){
+        return ACTIVE_SKIN;
+    }
+
+    public static void setActiveSkin(SKIN skin){
+        ACTIVE_SKIN = skin;
+    }
+
+    public class PlayerSprite extends AnimatedSprite {
         public PlayerSprite(Vector transform, Vector dimensions, int frameTick) {
             super(transform, dimensions, frameTick);
-            String state = WALK_RIGHT;
-            String[] resources = new String[] {
-                    "player-walk2-right",
-                    "player-walk-right"
-            };
-            addResources(state, Arrays.asList(resources));
+            addResources("player-walk-right", List.of(ACTIVE_SKIN + "-walk-right", ACTIVE_SKIN + "-walk2-right"));
+            addResources("player-walk-left", List.of(ACTIVE_SKIN + "-walk-left", ACTIVE_SKIN + "-walk2-left"));
+            addResources("player-idle-right", List.of(ACTIVE_SKIN + "-right"));
+            addResources("player-idle-left", List.of(ACTIVE_SKIN + "-left"));
+            addResources("player-jump-right", List.of(ACTIVE_SKIN + "-jump-right"));
+            addResources("player-jump-left", List.of(ACTIVE_SKIN + "-jump-left"));
+        }
+    }
 
-            state = IDLE_RIGHT;
-            resources = new String[] {
-                    "player-right"
-            };
-            addResources(state, Arrays.asList(resources));
+    public class CrossbowSprite extends AnimatedSprite {
+        public CrossbowSprite(Vector transform, Vector dimensions, int frameTick) {
+            super(transform, dimensions, frameTick);
+            addResources("crossbow-hidden", List.of("transparent"));
+            addResources("crossbow-walk-left", List.of("crossbow-walk-left", "crossbow-walk2-left"));
+            addResources("crossbow-walk-right", List.of("crossbow-walk-right", "crossbow-walk2-right"));
+            addResources("crossbow-idle-left", List.of("crossbow-left"));
+            addResources("crossbow-idle-right", List.of("crossbow-right"));
+            addResources("crossbow-jump-left", List.of("crossbow-jump-left"));
+            addResources("crossbow-jump-right", List.of("crossbow-jump-right"));
+            setState("crossbow-hidden");
+        }
+    }
 
-            state = JUMP_RIGHT;
-            resources = new String[] {
-                    "player-jump-right"
-            };
-            addResources(state, Arrays.asList(resources));
-
-            state = DUCK_RIGHT;
-            resources = new String[] {
-                    "player-duck-right"
-            };
-            addResources(state, Arrays.asList(resources));
-
-            state = SHOT_RIGHT;
-            resources = new String[]{
-                    "player-walk-right-bow"
-            };
-            addResources(state, Arrays.asList(resources));
-
-            state = WALK_LEFT;
-            resources = new String[] {
-                    "player-walk2-left",
-                    "player-walk-left"
-            };
-            addResources(state, Arrays.asList(resources));
-
-            state = IDLE_LEFT;
-            resources = new String[] {
-                    "player-left"
-            };
-            addResources(state, Arrays.asList(resources));
-
-            state = JUMP_LEFT;
-            resources = new String[] {
-                    "player-jump-left"
-            };
-            addResources(state, Arrays.asList(resources));
-
-            state = DUCK_LEFT;
-            resources = new String[] {
-                    "player-duck-left"
-            };
-            addResources(state, Arrays.asList(resources));
-
-            state = SHOT_LEFT;
-            resources = new String[]{
-                    "player-walk-left-bow"
-            };
-            addResources(state, Arrays.asList(resources));
-
-            setState(IDLE_RIGHT);
+    public class BootsSprite extends AnimatedSprite {
+        public BootsSprite(Vector transform, Vector dimensions, int frameTick) {
+            super(transform, dimensions, frameTick);
+            addResources("boots-hidden", List.of("transparent"));
+            addResources("boots-walk-left", List.of("boots-walk-left", "boots-walk2-left"));
+            addResources("boots-walk-right", List.of("boots-walk-right", "boots-walk2-right"));
+            addResources("boots-idle-left", List.of("boots-left"));
+            addResources("boots-idle-right", List.of("boots-right"));
+            addResources("boots-jump-left", List.of("boots-jump-left"));
+            addResources("boots-jump-right", List.of("boots-jump-right"));
+            setState("boots-hidden");
         }
     }
 
@@ -190,6 +190,93 @@ public class PlayerEntity extends GameEntity {
     public static void spendCoins(int amount){
 
     }
+
+    private static Map<String, Float> getInitialItemFlags(){
+        Map<String, Float> itemFlags = new HashMap<>();
+
+        // Crossbow initial flags
+        itemFlags.put("crossbow-pre-delay", 200f);
+        itemFlags.put("crossbow-multishot", 0f);
+        itemFlags.put("crossbow-post-delay", 1000f);
+        itemFlags.put("crossbow-duration", 2000f) ;
+        itemFlags.put("crossbow-moving", 1f);
+        itemFlags.put("crossbow-arrow-speed", 15f);
+        itemFlags.put("crossbow-collected", 1f);
+        itemFlags.put("crossbow-quiver-size", 3f);
+
+        // Jump boots initial flags
+        itemFlags.put("boots-num-additional-jumps", 0f);
+        itemFlags.put("boots-jump-boost", 0f);
+        itemFlags.put("boots-successive-jump-power", 0.7f);
+        itemFlags.put("boots-sprint", 1f);
+        itemFlags.put("boots-sprint-multiplier", 1.5f);
+        itemFlags.put("boots-collected", 0f);
+
+        return itemFlags;
+    }
+
+    // Methods for accessing flag variables
+
+    // Crossbow
+
+    public static boolean hasCrossbow(){
+        return ITEM_FLAGS.get("crossbow-collected").intValue() >= 1;
+    }
+
+    public static int getCrossbowPreShotDelay(){
+        return ITEM_FLAGS.get("crossbow-pre-delay").intValue();
+    }
+
+    public static int getCrossbowPostShotDelay(){
+        return ITEM_FLAGS.get("crossbow-post-delay").intValue();
+    }
+
+    public static float getCrossbowShotSpeed(){
+        return ITEM_FLAGS.get("crossbow-arrow-speed");
+    }
+
+    public static int getCrossbowShotDuration(){
+        return ITEM_FLAGS.get("crossbow-duration").intValue();
+    }
+
+    public static boolean hasMultishotCrossbow(){
+        return ITEM_FLAGS.get("crossbow-multishot").intValue() >= 1;
+    }
+
+    public static boolean canShootWhileMoving(){
+        return ITEM_FLAGS.get("crossbow-moving").intValue() >= 1;
+    }
+
+    public static int getCrossbowQuiverSize(){
+        return ITEM_FLAGS.get("crossbow-quiver-size").intValue();
+    }
+
+    // Boots
+
+    public static boolean hasBoots(){
+        return ITEM_FLAGS.get("boots-collected").intValue() >= 1;
+    }
+
+    public static int getBootsAdditionalJumps(){
+        return ITEM_FLAGS.get("boots-num-additional-jumps").intValue();
+    }
+
+    public static float getBootsAdditionalHeight(){
+        return ITEM_FLAGS.get("boots-jump-boost");
+    }
+
+    public static float getBootsSuccessiveJumpPower(){
+        return ITEM_FLAGS.get("boots-successive-jump-power");
+    }
+
+    public static boolean canSprint(){
+        return ITEM_FLAGS.get("boots-sprint").intValue() >= 1;
+    }
+
+    public static float getSprintMultiplier(){
+        return ITEM_FLAGS.get("boots-sprint-multiplier");
+    }
+
 }
 
 
